Fixed icon colors Removed `!important` where not needed Fixed filters section overflow issue

--- a/src/components/Checkbox/Checkbox.scss
+++ b/src/components/Checkbox/Checkbox.scss
@@ -35,6 +35,7 @@
     border-radius: 4px;
     border: 1px solid colors.$gray-300;
     background-color: colors.$base-white;
+    flex-shrink: 0;
 
     &[data-size="xs"] {
       height: 10px;
@@ -83,6 +84,16 @@
 }
 
 .dark .custom.checkbox.container {
+  .checkmark {
+    border: 1px solid colors.$gray-500;
+    background-color: colors.$gray-800;
+  }
+
+  & input:checked~.checkmark {
+    border: 1px solid colors.$gray-500;
+    background-color: colors.$gray-800;
+    background-image: url("data:image/svg+xml,%3Csvg width='10' height='8' viewBox='0 0 10 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M9 1L3.5 6.5L1 4' stroke='%23FFFFFF' stroke-width='1.6666' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
+  }
 
   &:hover input~.checkmark,
   input:focus-visible~.checkmark {
