--- a/src/components/NftCardWithBlurEffect.scss
+++ b/src/components/NftCardWithBlurEffect.scss
@@ -3,7 +3,7 @@
 @use "../design-system/typography/weights";
 
 .blur.effect.character.details {
-  width: 238px !important;
+  width: 238px;
   position: relative;
 
   img {
