--- a/src/elements/Icon.scss
+++ b/src/elements/Icon.scss
@@ -10,7 +10,7 @@ i {
   color: currentColor;
 
   svg {
-    color: currentColor !important;
+    color: currentColor;
     width: auto;
   }
 }
