--- a/src/views/home/KnowTheCharacters.scss
+++ b/src/views/home/KnowTheCharacters.scss
@@ -54,7 +54,7 @@
     justify-content: space-between;
     align-items: center;
 
-    & > div {
+    &>div {
       @include weights.medium;
       @include styles.text-sm;
     }
@@ -70,8 +70,8 @@
       border: 1px solid colors.$gray-300;
 
       &:not(:disabled):not([data-disabled]):hover {
-        background-color: colors.$gray-50 !important;
-        color: colors.$gray-700 !important;
+        background-color: colors.$gray-50;
+        color: colors.$gray-700;
       }
 
       &:disabled,
@@ -103,14 +103,14 @@
     border: none;
 
     &:not(:disabled):not([data-disabled]):hover {
-      background-color: colors.$gray-700 !important;
-      color: colors.$white !important;
+      background-color: colors.$gray-700;
+      color: colors.$white;
     }
 
     &:disabled,
     &[data-disabled] {
       color: colors.$white;
-      border-color: transparent !important;
+      border-color: transparent;
     }
   }
 }
