--- a/src/views/home/PremiumNfts.scss
+++ b/src/views/home/PremiumNfts.scss
@@ -8,23 +8,24 @@
 
   .slider.container {
     padding: 0;
+
     .arrows {
       justify-content: flex-end;
       gap: 12px;
       margin-top: 24px;
 
       button {
-        width: 36px !important;
-        height: 36px !important;
-        backdrop-filter: blurs.$sm !important;
+        width: 36px;
+        height: 36px;
+        backdrop-filter: blurs.$sm;
 
-        background-color: colors.$black-900 !important;
-        color: colors.$white !important;
-        border: none !important;
+        background-color: colors.$black-900;
+        color: colors.$white;
+        border: none;
 
         &:not(:disabled):not([data-disabled]):hover {
-          background-color: colors.$gray-800 !important;
-          color: colors.$white !important;
+          background-color: colors.$gray-800;
+          color: colors.$white;
         }
 
         &:disabled,
